# Nmap Changelog ($Id$); -*-text-*-

o Added another case to NmapOps::RawScan() to cover the case where we are using
  a SYN ping scan and issuing raw packets.  This fixes a bug wherein nmap would
  not display the "Raw packets sent..." message [Josh Marlow]

o Changed the ICMP ping probes to use a random non-zero ICMP id.  Some hosts
  seem to drop probes when ICMP id is 0 [Josh Marlow]

o Changed the default UDP ping port to 40125.  This appears to be a
  better port based on tests done by David [Josh Marlow]

o [Ncat] Handling of newlines on Windows has been improved. CRLF is
  automatically converted to bare LF when input is from the console, but
  not when it is from a pipe or a file. No newline translation is done
  on output (it was being done before). This makes it possible to
  transfer binary files with Ncat on Windows without any corruption.
  [David]

o Added initial SCTP port scanning support to Nmap.  SCTP is
  a layer 4 protocol used mostly for telephony related applications.
  This brings the following new features:
  o SCTP INIT chunk port scan (-sY): open ports return an INIT-ACK
    chunk, closed ones an ABORT chunk.  This is the SCTP equivalent
    of a TCP SYN stealth scan.
  o SCTP COOKIE-ECHO chunk port scan (-sZ): open ports are silent,
    closed ports return an ABORT chunk.
  o SCTP INIT chunk ping probes (-PY): host discovery using SCTP
    INIT chunk packets.
  o SCTP-specific IP protocol scan (-sO -p sctp).
  o SCTP-specific traceroute support (--traceroute).
  o The ability to use the deprecated Adler32 algorithm as specified
    in RFC 2960 instead of CRC32C from RFC 4960 (--adler32).
  o 42 well-known SCTP ports were added to the nmap-services file.
  Part of the work on SCTP support was kindly sponsored by
  Compass Security AG, Switzerland.  [Daniel Roethlisberger]

o [Zenmap] The Topology tab now has a "Save Snapshot" button that allows
  saving the current topology display as PNG, PostScript, PDF, and SVG.
  [Joao Medeiros]
